fix: overflow style

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 body {
   background: url("/bg-mobile.jpg") no-repeat top center/cover;
-  height: 100vh;
-  overflow: hidden;
+  height: 100vh;  
+  overflow: scroll;
 }
 
 body * {
@@ -16,6 +16,6 @@ body * {
 @media (min-width: 700px) {
   body {
     background: url("/bg-desktop.jpg") no-repeat top center/cover;
-    overflow: visible;    
+    overflow: hidden;
   }
 }
